@@ -29,12 +29,7 @@ Document header
 <tr><th class="docinfo-name">Author:</th>
 <td>David Goodger</td></tr>
 <tr><th class="docinfo-name">Address:</th>
-<td><pre class="address">
-123 Example Street
-Example, EX  Canada
-A1B 2C3
-</pre>
-</td></tr>
+<td>123 Example Street<br />Example, EX &nbsp;Canada<br />A1B 2C3</td></tr>
 <tr><th class="docinfo-name">Contact:</th>
 <td><a class="first last reference" href="mailto:goodger&#64;users.sourceforge.net">goodger&#64;users.sourceforge.net</a></td></tr>
 <tr><th class="docinfo-name">Authors:</th>
@@ -338,16 +333,11 @@ description.</p>
 <p>Literal blocks are indicated with a double-colon (&quot;::&quot;) at the end of
 the preceding paragraph (over there <tt class="docutils literal"><span class="pre">--&gt;</span></tt>).  They can be indented:</p>
 <pre class="literal-block">
-if literal_block:
-    text = 'is left as-is'
-    spaces_and_linebreaks = 'are preserved'
-    markup_processing = None
+if literal_block:<br /> &nbsp; &nbsp;text = 'is left as-is'<br /> &nbsp; &nbsp;spaces_and_linebreaks = 'are preserved'<br /> &nbsp; &nbsp;markup_processing = None
 </pre>
 <p>Or they can be quoted without indentation:</p>
 <pre class="literal-block">
-&gt;&gt; Great idea!
-&gt;
-&gt; Why didn't I think of that?
+&gt;&gt; Great idea!<br />&gt;<br />&gt; Why didn't I think of that?
 </pre>
 </div>
 <div class="section">
@@ -424,10 +414,7 @@ own it, and what it is too.</p>
 <div class="section">
 <h2><a class="toc-backref" href="#id47" id="doctest-blocks" name="doctest-blocks">2.10&nbsp;&nbsp;&nbsp;Doctest Blocks</a></h2>
 <pre class="doctest-block">
-&gt;&gt;&gt; print 'Python-specific usage examples; begun with &quot;&gt;&gt;&gt;&quot;'
-Python-specific usage examples; begun with &quot;&gt;&gt;&gt;&quot;
-&gt;&gt;&gt; print '(cut and pasted from interactive Python sessions)'
-(cut and pasted from interactive Python sessions)
+&gt;&gt;&gt; print 'Python-specific usage examples; begun with &quot;&gt;&gt;&gt;&quot;'<br />Python-specific usage examples; begun with &quot;&gt;&gt;&gt;&quot;<br />&gt;&gt;&gt; print '(cut and pasted from interactive Python sessions)'<br />(cut and pasted from interactive Python sessions)
 </pre>
 </div>
 <div class="section">
@@ -725,8 +712,7 @@ Compound 2, literal.
 </div>
 <div class="compound">
 <pre class="compound-first literal-block">
-Compound 4.
-This one starts with a literal block.
+Compound 4.<br />This one starts with a literal block.
 </pre>
 <p class="compound-last">Compound 4, a paragraph.</p>
 </div>
@@ -773,10 +759,7 @@ paragraph.</td>
 <div class="section">
 <h3><a class="toc-backref" href="#id79" id="parsed-literal-blocks" name="parsed-literal-blocks">2.14.8&nbsp;&nbsp;&nbsp;Parsed Literal Blocks</a></h3>
 <pre class="literal-block">
-This is a parsed literal block.
-    This line is indented.  The next line is blank.
-
-Inline markup is supported, e.g. <em>emphasis</em>, <strong>strong</strong>, <tt class="docutils literal"><span class="pre">literal</span>
+This is a parsed literal block.<br /> &nbsp; &nbsp;This line is indented. &nbsp;The next line is blank.<br /><br />Inline markup is supported, e.g. <em>emphasis</em>, <strong>strong</strong>, <tt class="docutils literal"><span class="pre">literal</span>
 <span class="pre">text</span></tt>, footnotes <a class="footnote-reference" href="#id8" id="id21" name="id21">[1]</a>, <span class="target" id="id22">targets</span>, and <a class="reference" href="http://www.python.org/">references</a>.
 </pre>
 </div>
